kube/user-delpoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: grp5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: your-docker-repo/user-service:latest
        ports:
        - containerPort: 4002
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
