kube/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: grp5
spec:
  selector:
    app: todo
  ports:
  - protocol: TCP
    port: 4001
    targetPort: 4001
  type: ClusterIP
