kube/user-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  namespace: grp5
spec:
  ingressClassName: "nginx"
  rules:
  - host: your-domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/grp-5/user"
        backend:
          service:
            name: user-service
            port:
              number: 4002
